# Hospital_Consultation

./: README.md
backend/: CMakeLists.txt  database.sql  init-db.js  package-lock.json  package.json  server.js
backend/include/: db_connection.h
backend/src/: db_connection.cpp  main.cpp
database/: schema.sql
frontend/: index.html
frontend/css/: style.css
frontend/js/: main.js
